# CS_1666_Platformer

./: .gitignore  Cargo.toml  Platformer_team_description.md  README.md  branch test.txt  known_bugs.md  sdl_core.rs
Assets/Credit Art/: andrew_credits  jake_credits
Networking-Projects/Austin_proj/: Cargo.toml
Networking-Projects/Austin_proj/src/: lib.rs  main.rs
Networking-Projects/EvanProject/src/: lib.rs
Networking-Projects/Greg_proj/src/: lib.rs
Networking-Projects/alvyn_project/: Cargo.toml  hello.html
Networking-Projects/alvyn_project/src/: lib.rs
credits/: Cargo.toml
credits/src/: main.rs
mirror/: Cargo.toml
mirror/src/: main.rs
src/: animation_controller.rs  credits.rs  ellipsoid_collider.rs  game.rs  hint_system.rs  main.rs  menu.rs  networking.rs  object_controller.rs  old_game.rs  physics_controller.rs  plate_controller.rs  player.rs  portal_controller.rs  portal_traversible.rs  rect_collider.rs  remote_player.rs  sdl_core.rs  test.rs
src/game/: animation_controller.rs  mod.rs  object_controller.rs  physics_controller.rs  player.rs  portal_controller.rs  rect_collider.rs
src/levels/: cargo_run.bat - Shortcut.lnk  instructions.txt  level0.txt  level1.txt  level2.txt  level3.txt  level4.txt  mod.rs
src/renderer/: mod.rs
