[package]
name = "cs_1666_platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","mixer"]

[dev-dependencies]
rand = "0.8.0"
